--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^2.24.50",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "reakit": "^1.2.3"
+    "reakit": "^1.2.3",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
     "prettier": "2.1.0"
