--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
+    "@types/theme-ui": "^0.3.6",
     "prettier": "2.1.0"
   },
   "repository": {
