--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "reakit": "^1.2.3",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.3.1",
+    "typeface-raleway": "^0.0.75"
   },
   "devDependencies": {
     "@types/theme-ui": "^0.3.6",
