--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "gatsby": "^2.24.50",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "react": "^16.12.0",
