--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "gatsby": "^2.24.50",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
