--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "quale",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Qualé? - Descubra informações interessantes sobre filmes.",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -30,9 +30,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/davigsousa/quale"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/davigsousa/quale/issues"
   }
 }
