--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "axios": "^0.20.0",
     "gatsby": "^2.24.50",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-manifest": "^2.4.26",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "reakit": "^1.2.3",
     "theme-ui": "^0.3.1",
     "typeface-raleway": "^0.0.75"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "@types/theme-ui": "^0.3.6",
     "prettier": "2.1.0"
   },
